# SystemCallMock

./: CMakeLists.txt  README.md
include/: io.h
src/: io.cpp
test/: io_test.cpp  system_call_mock.hpp
